last update for the day

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 	font: 75% georgia, sans-serif;
 	line-height: 1.88889;
 	color: #555753; 
-	background: #fff no-repeat bottom right; 
+	background: #fff url(http://csszengarden.com/001/blossoms.jpg) no-repeat bottom right; 
 	margin: 0; 
 	padding: 0;
 	}
@@ -64,19 +64,19 @@ abbr {
 	}
 
 header h1 { 
-	background: transparent url(http://csszengarden.com/001/h1.gif) no-repeat top left;
 	margin-top: 10px;
+	margin-bottom: 10px;
 	display: block;
 	width: 219px;
 	height: 87px;
-	float: left;
+	float: center;
 
 	text-indent: 100%;
 	white-space: nowrap;
-	overflow: hidden;
+	
 	}
 header h2 { 
-	background: transparent url(http://csszengarden.com/001/h2.gif) no-repeat top left; 
+	background: 
 	margin-top: 58px; 
 	margin-bottom: 40px; 
 	width: 200px; 
@@ -89,7 +89,9 @@ header h2 {
 	}
 header {
 	padding-top: 20px;
-	height: 87px;
+    height: 30px;
+    text-align: center;
+    
 }
 
 .summary {
